--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/cloudflare": "^10.2.6",
     "astro": "^4.5.9",
     "typescript": "^5.4.3"
   },
