Add compatibility flags to allow search to use stream constructors

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,2 +1,7 @@
 name = "ask-tipsy"
 pages_build_output_dir = "./dist"
+
+compatibility_flags = [
+    "transformstream_enable_standard_constructor",
+    "streams_enable_constructors"
+]
